2025-01-22T01:09:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12899061287 # 542
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-22
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 987 1742 / 992 1747
* notice: next accum: outdated-unq outdated-all / unq all: 989 1744 / 992 1747
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-07] / []

2025-01-20T01:09:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12859004478 # 540
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-20
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 987 1742 / 991 1746
* notice: next accum: outdated-unq outdated-all / unq all: 987 1742 / 992 1747
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-19]

2025-01-19T01:13:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12849035105 # 539
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 985 1740 / 991 1746
* notice: next accum: outdated-unq outdated-all / unq all: 987 1742 / 991 1746
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-30 2025-01-03] / []

2025-01-09T02:12:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12682356723 # 535