@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-22T01:09:59Z",
-  "count_outdated" : 1744,
-  "uniques_outdated" : 989,
+  "timestamp" : "2025-01-23T01:08:26Z",
+  "count_outdated" : 1746,
+  "uniques_outdated" : 991,
   "count" : 1747,
   "uniques" : 992,
   "clones" : [
-    {
-      "timestamp": "2025-01-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-01-19T00:00:00Z",
       "count": 1,
